rust/macros/tests/invalid/target/debug/deps/only_comma_rs-9872ead8267605a5.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/only_comma_rs-9872ead8267605a5: only-comma.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/only_comma_rs-9872ead8267605a5.d: only-comma.rs

only-comma.rs:
